[package]
name = "dss-now-playing"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Used for parsing json
serde_json = "1.0"
# Used for downloading json and image files
reqwest = { version = "0.11", features = ["blocking", "json"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Argument parsing
clap = "3.0.0-beta.2"
bytes = "1.0.1"

# The following dependencies rely on vcpkg
# Run `cargo install cargo-vcpkg` once globally to ensure the tool is installed
# Then run `cargo vcpkg build` to install the below dependencies
# After that `cargo build` should work as normal
[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["ttf","image","static-link","use-vcpkg"]

[package.metadata.vcpkg]
dependencies = ["sdl2", "sdl2-image[libjpeg-turbo]", "sdl2-ttf"]
git = "https://github.com/microsoft/vcpkg"
rev = "a267ab118c09f56f3dae96c9a4b3410820ad2f0b"

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }